fix(scss): fixing datatable to horizontal scroll (responsive) on mobile view

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1016,6 +1016,10 @@ ul > li:nth-child(4n+4) > .badges-list li {
   border-radius: 2px;
 }
 
+.dataTables_scroll {
+  overflow-x: auto;
+}
+
 // storage items async load
 .storage-object {
   display: none;
